Fix audio with incorrect memory mapped between Controller2 and the writing for APU, sounds much better